# compgraph

./: .coverage  .task.yml  README.md  pyproject.toml
compgraph/: algorithms.py  external_sort.py  graph.py  operations.py  operations_example.py
compgraph.egg-info/: PKG-INFO  SOURCES.txt
examples/: a.txt  run_inverted_index.py  run_pmi.py  run_word_count.py  run_yandex_maps.py
tests/memory/: memory_watchdog.py  test_algorithms.py
