[project]
name = "compgraph"
version = "0.1.0"
description = "Compgraph project"
readme = "LIB_README.md"
requires-python = ">=3.13"
dependencies = ["click", "pytest"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["compgraph"]
